5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1871_1720.log
== TEST (2019-07-02 16:06:46) 
-- CODE:
from numpy import *
from numpy.linalg import *
notas=array(eval(input('Digite as notas:  ')))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:07:00) 
-- CODE:
from numpy import *
from numpy.linalg import *
notas=array(eval(input('Digite as notas:  ')))

print(notas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:22:50) 
-- CODE:
from numpy import *
from numpy.linalg import *
notas=array(eval(input('Digite as notas:  ')))

fo i in notas:
	if i 
print(notas)
-- ERROR:
File "XXXX", line 5
    fo i in notas:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:22:54) 
-- CODE:
from numpy import *
from numpy.linalg import *
notas=array(eval(input('Digite as notas:  ')))

fo i in notas:
	if i 
print(notas)
-- EXECUTION TIME:
0.787433
-- ERROR:
  File "/home/codebench/codes/1871/1720/main.py", line 5
    fo i in notas:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:36:25) 
-- CODE:
from numpy import *
from numpy.linalg import *
notas=array(eval(input('Digite as notas:  ')))

fo i in notas:
	if i 
print(notas)
-- ERROR:
File "XXXX", line 5
    fo i in notas:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
